--- a/incrowd/frontend/css/profiles.css
+++ b/incrowd/frontend/css/profiles.css
@@ -33,7 +33,7 @@
     max-height: 400px;
     display: block;
     margin: 0 auto 10px auto;
-    width: inherit;
+    max-width: 100%;
 }
 
 .profile .md-button {
